<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="fragmentLoginObject" type="com.example.foodapp.fragment.LoginFragment" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LoginFragment">


        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/annie_use_your_telescope"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSingIn"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:shadowColor="@color/black"
            android:shadowRadius="20"
            android:translationZ="1dp"

            app:cardCornerRadius="5dp"

            app:cardElevation="20dp"
            app:layout_constraintBottom_toTopOf="@+id/bttnAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/edtEmailAdres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:fontFamily="@font/amiko"

                    android:hint="mail"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText

                    android:id="@+id/edTPassword2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:ems="10"
                    android:hint="@string/default_password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/amiko"


                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/edtEmailAdres"
                    app:layout_constraintStart_toStartOf="@+id/edtEmailAdres"
                    app:layout_constraintTop_toBottomOf="@+id/edtEmailAdres"
                    tools:ignore="TouchTargetSizeCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSingUp"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:shadowColor="@color/black"
            android:shadowRadius="20"


            android:translationZ="1dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toTopOf="@+id/bttnAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:fontFamily="@font/amiko"
                    android:hint="@string/name_lastname"
                    app:layout_constraintEnd_toEndOf="@+id/edtEmailSingUp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/edtEmailSingUp"
                    app:layout_constraintTop_toBottomOf="@+id/edtEmailSingUp"
                    tools:ignore="TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />

                <EditText

                    android:id="@+id/edtEmailSingUp"
                    android:layout_width="262dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"


                    android:fontFamily="@font/amiko"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText

                    android:id="@+id/edtPasswordSingUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"


                    android:ems="10"
                    android:fontFamily="@font/amiko"
                    android:hint="@string/default_password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@+id/edtEmailSingUp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/edtEmailSingUp"
                    app:layout_constraintTop_toBottomOf="@+id/edtName"
                    tools:ignore="TextFields,TouchTargetSizeCheck" />

                <EditText

                    android:id="@+id/edTPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"


                    android:ems="10"
                    android:fontFamily="@font/amiko"
                    android:hint="tekrar şifre"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@+id/edtName"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/edtName"
                    app:layout_constraintTop_toBottomOf="@+id/edtPasswordSingUp"
                    tools:ignore="TouchTargetSizeCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>





        <com.google.android.material.button.MaterialButton
            android:id="@+id/bttnAction"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:onClick="@{()->fragmentLoginObject.buttonSignUp()}"
            android:text="Giriş Yap"
            app:backgroundTint="@color/lightBlue"
            android:textColor="@color/black"
            app:cornerRadius="5dp"
            android:fontFamily="@font/amiko"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSignView"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:fontFamily="@font/amiko"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Giriş sayfasına gitmek için tıkla."
            app:layout_constraintBottom_toTopOf="@+id/bttnAction"
            app:layout_constraintStart_toStartOf="@+id/bttnAction" />

        <TextView
            android:id="@+id/tvSignUpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/amiko"
            android:text="Hesabın yok mu?Kaydolmak için tıkla."
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvSignView"
            app:layout_constraintStart_toStartOf="@+id/tvSignView" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>