<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="fragmentDetail" type="com.example.foodapp.fragment.DetailFragment" />
        <variable name="foodObject" type="com.example.foodapp.entity.Food" />/>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.DetailFragment">

        <ImageView
            android:id="@+id/imageViewFood"
            android:layout_width="412dp"
            android:layout_height="222dp"

            android:layout_marginTop="16dp"
            android:contentDescription="@string/foodimage"
            android:translationZ="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vector_delete"
            tools:src="@tools:sample/backgrounds/scenic" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"


            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewFood">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textViewFoodName"
                    android:layout_width="228dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="56dp"
                    android:text="@{foodObject.food_name}"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonPlus"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/lightBlue"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="12dp"
                    android:onClick="@{()->fragmentDetail.buttonPlus()}"
                    android:text="+"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    app:cornerRadius="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/bttnAddCart"
                    app:layout_constraintEnd_toStartOf="@+id/textViewPrice"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="93dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/price_one"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/buttonPlus"
                    app:layout_constraintTop_toTopOf="@+id/buttonPlus" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonMinus"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/lightBlue"
                    android:onClick="@{()->fragmentDetail.buttonMinus()}"
                    android:text="-"
                    android:textSize="20sp"
                    app:cornerRadius="5dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewPrice"
                    app:layout_constraintTop_toTopOf="@+id/buttonPlus" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttnAddCart"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:fontFamily="@font/amiko"
                    android:backgroundTint="@color/lightBlue"
                    android:onClick="@{()->fragmentDetail.buttonToCart(foodObject)}"
                    android:text="@string/add_cart"
                    android:textSize="15sp"
                    app:cornerRadius="5dp"
                    android:textColor="@color/black"
                    app:iconSize="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/textViewFoodPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text='@{String.valueOf(foodObject.food_price)+"₺"}'
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/textViewFoodName"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="@+id/textViewFoodName"
                    app:layout_constraintTop_toBottomOf="@+id/textViewFoodName" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>